--- a/ShellBoost.FirstStep/ShellBoost.FirstStep.csproj
+++ b/ShellBoost.FirstStep/ShellBoost.FirstStep.csproj
@@ -2,11 +2,31 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <DisableWinExeOutputInference>true</DisableWinExeOutputInference>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="ShellBoost.Core">
+      <HintPath>..\lib\ShellBoost\ShellBoost.Core.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\lib\ShellBoost\ShellBoost.77454e55063348d0b49dcef3c1d03cac.ARM64.dll" Link="ShellBoost.77454e55063348d0b49dcef3c1d03cac.ARM64.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\lib\ShellBoost\ShellBoost.77454e55063348d0b49dcef3c1d03cac.x64.dll" Link="ShellBoost.77454e55063348d0b49dcef3c1d03cac.x64.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\lib\ShellBoost\ShellBoost.77454e55063348d0b49dcef3c1d03cac.x86.dll" Link="ShellBoost.77454e55063348d0b49dcef3c1d03cac.x86.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
